Broke non-enums into basic and domain objects
