# swagger_server/models/basic_conditions.py
@@ -1,0 +1,176 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class BasicConditions(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+    def __init__(self, elapsed_time_lt: int=None, elapsed_time_gt: int=None, actions: List[List[str]]=None, probes: List[str]=None, probe_responses: List[str]=None):  # noqa: E501
+        """BasicConditions - a model defined in Swagger
+
+        :param elapsed_time_lt: The elapsed_time_lt of this BasicConditions.  # noqa: E501
+        :type elapsed_time_lt: int
+        :param elapsed_time_gt: The elapsed_time_gt of this BasicConditions.  # noqa: E501
+        :type elapsed_time_gt: int
+        :param actions: The actions of this BasicConditions.  # noqa: E501
+        :type actions: List[List[str]]
+        :param probes: The probes of this BasicConditions.  # noqa: E501
+        :type probes: List[str]
+        :param probe_responses: The probe_responses of this BasicConditions.  # noqa: E501
+        :type probe_responses: List[str]
+        """
+        self.swagger_types = {
+            'elapsed_time_lt': int,
+            'elapsed_time_gt': int,
+            'actions': List[List[str]],
+            'probes': List[str],
+            'probe_responses': List[str]
+        }
+
+        self.attribute_map = {
+            'elapsed_time_lt': 'elapsed_time_lt',
+            'elapsed_time_gt': 'elapsed_time_gt',
+            'actions': 'actions',
+            'probes': 'probes',
+            'probe_responses': 'probe_responses'
+        }
+        self._elapsed_time_lt = elapsed_time_lt
+        self._elapsed_time_gt = elapsed_time_gt
+        self._actions = actions
+        self._probes = probes
+        self._probe_responses = probe_responses
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'BasicConditions':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The BasicConditions of this BasicConditions.  # noqa: E501
+        :rtype: BasicConditions
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def elapsed_time_lt(self) -> int:
+        """Gets the elapsed_time_lt of this BasicConditions.
+
+        True if the scenario elapsed time (in seconds) is less than the specified value  # noqa: E501
+
+        :return: The elapsed_time_lt of this BasicConditions.
+        :rtype: int
+        """
+        return self._elapsed_time_lt
+
+    @elapsed_time_lt.setter
+    def elapsed_time_lt(self, elapsed_time_lt: int):
+        """Sets the elapsed_time_lt of this BasicConditions.
+
+        True if the scenario elapsed time (in seconds) is less than the specified value  # noqa: E501
+
+        :param elapsed_time_lt: The elapsed_time_lt of this BasicConditions.
+        :type elapsed_time_lt: int
+        """
+
+        self._elapsed_time_lt = elapsed_time_lt
+
+    @property
+    def elapsed_time_gt(self) -> int:
+        """Gets the elapsed_time_gt of this BasicConditions.
+
+        True if the scenario elapsed time (in seconds) is greater than the specified value  # noqa: E501
+
+        :return: The elapsed_time_gt of this BasicConditions.
+        :rtype: int
+        """
+        return self._elapsed_time_gt
+
+    @elapsed_time_gt.setter
+    def elapsed_time_gt(self, elapsed_time_gt: int):
+        """Sets the elapsed_time_gt of this BasicConditions.
+
+        True if the scenario elapsed time (in seconds) is greater than the specified value  # noqa: E501
+
+        :param elapsed_time_gt: The elapsed_time_gt of this BasicConditions.
+        :type elapsed_time_gt: int
+        """
+
+        self._elapsed_time_gt = elapsed_time_gt
+
+    @property
+    def actions(self) -> List[List[str]]:
+        """Gets the actions of this BasicConditions.
+
+        True if any of the specified lists of actions have been taken; multiple action ID lists have \"or\" semantics; multiple action IDs within a list have \"and\" semantics  # noqa: E501
+
+        :return: The actions of this BasicConditions.
+        :rtype: List[List[str]]
+        """
+        return self._actions
+
+    @actions.setter
+    def actions(self, actions: List[List[str]]):
+        """Sets the actions of this BasicConditions.
+
+        True if any of the specified lists of actions have been taken; multiple action ID lists have \"or\" semantics; multiple action IDs within a list have \"and\" semantics  # noqa: E501
+
+        :param actions: The actions of this BasicConditions.
+        :type actions: List[List[str]]
+        """
+
+        self._actions = actions
+
+    @property
+    def probes(self) -> List[str]:
+        """Gets the probes of this BasicConditions.
+
+        True if the specified list of probe_ids have been answered  # noqa: E501
+
+        :return: The probes of this BasicConditions.
+        :rtype: List[str]
+        """
+        return self._probes
+
+    @probes.setter
+    def probes(self, probes: List[str]):
+        """Sets the probes of this BasicConditions.
+
+        True if the specified list of probe_ids have been answered  # noqa: E501
+
+        :param probes: The probes of this BasicConditions.
+        :type probes: List[str]
+        """
+
+        self._probes = probes
+
+    @property
+    def probe_responses(self) -> List[str]:
+        """Gets the probe_responses of this BasicConditions.
+
+        True if the specified list of probe responses (choice) have been sent  # noqa: E501
+
+        :return: The probe_responses of this BasicConditions.
+        :rtype: List[str]
+        """
+        return self._probe_responses
+
+    @probe_responses.setter
+    def probe_responses(self, probe_responses: List[str]):
+        """Sets the probe_responses of this BasicConditions.
+
+        True if the specified list of probe responses (choice) have been sent  # noqa: E501
+
+        :param probe_responses: The probe_responses of this BasicConditions.
+        :type probe_responses: List[str]
+        """
+
+        self._probe_responses = probe_responses
